[package]
name = "acs-c"
version = "0.0.1"
edition = "2021"
authors = ["Jesper Dalberg"]

[dependencies]
cwmp = "0.2"
tokio = {version = "1", features = ["full"]}
tokio-trace = "0.1"
env_logger = "0.9"
log = { version = "0.4.8", features = ["std"] }
futures = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
hyper = { version = "^0.14", features = ["server", "http1", "tcp"] }
rand = "0.8"
